--- a/index.html
+++ b/index.html
@@ -19,20 +19,19 @@
   </header>
 
   <main>
-    <section id="home" class="section">
-      <div class="content">
-        <h1>Hi, I'm Rushabh Dhoke</h1>
+  <section id="home" class="section">
+    <div class="content">
+      <h1 id="dynamic-text">Hi, I'm Rushabh Dhoke</h1>
+      <div id="expertise">
         <p>MSc Robotics, Automation and Mechatronics student @ University of Delaware</p>
         <p>Welcome to my portfolio website.</p>
       </div>
-    </section>
-
-    <section id="about" class="section">
-      <div class="content">
-        <h2>About Me</h2>
-        <p>I am a passionate and dynamic professional with a solid foundation in Mechanical Engineering and a growing expertise in Automation, Robotics, and Mechatronics. My journey is driven by a fascination for innovation at the intersection of hardware, software, and AI/ML. With hands-on experience in CAD, Additive Manufacturing, and Simulation, I specialize in designing and developing intelligent robotic systems that push the boundaries of technology. I thrive on solving complex problems, integrating diverse disciplines, and leading collaborative projects that deliver impactful results. Whether it's prototyping autonomous vehicles, optimizing industrial processes, or pioneering smart system solutions, I am dedicated to creating meaningful change through cutting-edge engineering.</p>
+      <div id="contact-links">
+        <a href="https://linkedin.com/in/yourprofile" target="_blank">LinkedIn</a>
+        <a href="mailto:rsd@udel.edu">Email</a>
       </div>
-    </section>
+    </div>
+  </section>
 
     <section id="projects" class="section">
       <div class="content">
