--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <p>Welcome to my portfolio website.</p>
       </div>
       <div id="contact-links">
-        <a href="https://linkedin.com/in/yourprofile" target="_blank">LinkedIn</a>
+        <a href="https://linkedin.com/in/rushabhdhoke23" target="_blank">LinkedIn</a>
         <a href="mailto:rsd@udel.edu">Email</a>
       </div>
     </div>
