--- a/index.html
+++ b/index.html
@@ -174,6 +174,10 @@ variance.</p>
   </div>
   
 
-  <script src="script.js"></script>
+<script src="js/scrollController.js"></script>
+<script src="js/modalController.js"></script>
+<script src="js/textAnimator.js"></script>
+<script src="js/main.js"></script>
+
 </body>
 </html>
