--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
   </header>
 
   <main>
+  <div class="loader">
+    <div class="spinner"></div>
+  </div>
+  
+  <div class="scroll-progress"></div>
+
   <section id="home" class="section">
     <div class="content">
       <h1 id="dynamic-text">Hi, I'm Rushabh Dhoke</h1>
@@ -71,7 +77,7 @@ machine inter-connectivity.
 ∗ Production Automation: Handling Ice-Cream and Cheese production, strategically implementing Lean
 Manufacturing principles and achieving a 30% increase in production efficiency.
 ∗ Process Optimization: Completed and analyzed time and motion studies to identify process bottlenecks, reducing
-task times by 20% through Value Stream Mapping and suggested creation of Standard Operating Procedures (SOPs).</p>p
+task times by 20% through Value Stream Mapping and suggested creation of Standard Operating Procedures (SOPs).</p>
       </div>
     </section>
     
